*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -9,4 +9,12 @@
 
 1986 წელს Vivian Campbell ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა Craig Goldy-მ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი Rowan Robertson.
 
+==მიმდინარე შემადგენლობა==
+*[[Ronnie James Dio]] – ვოკალი
+*[[Craig Goldy]] – გიტარა
+*[[Rudy Sarzo]] – ბასი
+*[[Simon Wright]] – დასარტყამი ინსტრუმენტები
+*[[Scott Warren]] – კლავიშები
+Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy-ის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
+
 !!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
