*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -12,9 +12,27 @@
 ==მიმდინარე შემადგენლობა==
 *[[Ronnie James Dio]] – ვოკალი
 *[[Craig Goldy]] – გიტარა
-*[[Rudy Sarzo]] – ბასი
+*[[Rudy Sarzo]] – ბას გიტარა
 *[[Simon Wright]] – დასარტყამი ინსტრუმენტები
 *[[Scott Warren]] – კლავიშები
 Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy-ის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
+
+==დისკოგრაფია==
+* 1983 ''[[Holy Diver]]'' chart position 61 (US)
+* ''[[The Last in Line]]'' (1984) chart position 24 (US)
+* ''[[Sacred Heart(album)|Sacred Heart]]'' (1985) chart position 29 (US)
+* ''[[Intermission (album)|Intermission]]'' (1986) chart position 70 (US)
+* ''[[Dream Evil (album)|Dream Evil]]'' (1987) chart position 43 (US)
+* ''[[Lock up the Wolves]]'' (1990) chart position 61 (US)
+* ''[[Strange Highways]]'' (1994) chart position 142 (US)
+* ''[[Diamonds – The Best of Dio]]'' (1995)
+* ''[[Angry Machines]]'' (1996)
+* ''[[Inferno - Last in Live]]'' (1998)
+* ''[[Magica]]'' (2000)
+* ''[[Killing the Dragon]]'' (2002) chart position 199 (US)
+* ''[[Master of the Moon]]'' (2004)
+* ''[[Evil or Divine - Live In New York City]]'' (2005)
+* ''[[Holy Diver -Live]] '' (2006)
+
 
 !!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
