--- a/დიო.mw
+++ b/დიო.mw
@@ -19,20 +19,20 @@ Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy
 
 ==დისკოგრაფია==
 * 1983 ''[[Holy Diver]]'' chart position 61 (US)
-* ''[[The Last in Line]]'' (1984) chart position 24 (US)
-* ''[[Sacred Heart(album)|Sacred Heart]]'' (1985) chart position 29 (US)
-* ''[[Intermission (album)|Intermission]]'' (1986) chart position 70 (US)
-* ''[[Dream Evil (album)|Dream Evil]]'' (1987) chart position 43 (US)
-* ''[[Lock up the Wolves]]'' (1990) chart position 61 (US)
-* ''[[Strange Highways]]'' (1994) chart position 142 (US)
-* ''[[Diamonds – The Best of Dio]]'' (1995)
-* ''[[Angry Machines]]'' (1996)
-* ''[[Inferno - Last in Live]]'' (1998)
-* ''[[Magica]]'' (2000)
-* ''[[Killing the Dragon]]'' (2002) chart position 199 (US)
-* ''[[Master of the Moon]]'' (2004)
-* ''[[Evil or Divine - Live In New York City]]'' (2005)
-* ''[[Holy Diver -Live]] '' (2006)
+* 1984 ''[[The Last in Line]]'' chart position 24 (US)
+* 1985 ''[[Sacred Heart(album)|Sacred Heart]]'' chart position 29 (US)
+* 1986 ''[[Intermission (album)|Intermission]]'' chart position 70 (US)
+* 1987 ''[[Dream Evil (album)|Dream Evil]]'' chart position 43 (US)
+* 1990 ''[[Lock up the Wolves]]'' chart position 61 (US)
+* 1994 ''[[Strange Highways]]'' chart position 142 (US)
+* 1995 ''[[Diamonds – The Best of Dio]]''
+* 1996 ''[[Angry Machines]]''
+* 1998 ''[[Inferno - Last in Live]]''
+* 2000 ''[[Magica]]''
+* 2002 ''[[Killing the Dragon]]'' chart position 199 (US)
+* 2004 ''[[Master of the Moon]]''
+* 2005 ''[[Evil or Divine - Live In New York City]]''
+* 2006 ''[[Holy Diver -Live]] ''
 
 
 !!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
