თხოვნაა ბმულები არ წაშალო

--- a/დიო.mw
+++ b/დიო.mw
@@ -36,3 +36,11 @@ Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy
 
 
 !!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
+
+
+
+[[en: Dio]]
+[[fr:Dio]]
+[[it:Dio (gruppo musicale)]]
+[[fi:Dio]]
+[[sv:Dio]]
