*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -1,13 +1,13 @@
 [[სურათი:Dio_logo.jpg|thumb|Ronnie James Dio|200px|right|დიოს ლოგო]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|რონი ჯეიმს დიო]]
 
-დიო არის [[heavy metal music|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია Vivian Campbell (გიტარა), Jimmy Bain (ბას გიტარა) და Vinny Appice (დასარტყამი ინსტრუმენტები).
+დიო (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
 
-1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი Claude Schnell.
+1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი კლოდ შნელი.
 
 მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart.
 
-1986 წელს Vivian Campbell ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა Craig Goldy-მ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი Rowan Robertson.
+1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი.
 
 ==მიმდინარე შემადგენლობა==
 *[[Ronnie James Dio]] – ვოკალი
@@ -20,9 +20,9 @@ Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy
 ==დისკოგრაფია==
 * 1983 ''[[Holy Diver]]'' chart position 61 (US)
 * 1984 ''[[The Last in Line]]'' chart position 24 (US)
-* 1985 ''[[Sacred Heart(album)|Sacred Heart]]'' chart position 29 (US)
-* 1986 ''[[Intermission (album)|Intermission]]'' chart position 70 (US)
-* 1987 ''[[Dream Evil (album)|Dream Evil]]'' chart position 43 (US)
+* 1985 ''[[Sacred Heart]]'' chart position 29 (US)
+* 1986 ''[[Intermission]]'' chart position 70 (US)
+* 1987 ''[[Dream Evil]]'' chart position 43 (US)
 * 1990 ''[[Lock up the Wolves]]'' chart position 61 (US)
 * 1994 ''[[Strange Highways]]'' chart position 142 (US)
 * 1995 ''[[Diamonds – The Best of Dio]]''
@@ -35,9 +35,8 @@ Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy
 * 2006 ''[[Holy Diver -Live]] ''
 
 
-!!!გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, გთხოვთ მოინახულოთ მოგვიანებით!!!
-
-
+გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, მოინახულოთ მოგვიანებით!
+გთხოვთ დროებით მაპატიოთ არაქართული ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
 [[en: Dio]]
 [[fr:Dio]]
