--- a/დიო.mw
+++ b/დიო.mw
@@ -1,7 +1,7 @@
 [[სურათი:Dio_logo.jpg|thumb|Ronnie James Dio|200px|right|დიოს ლოგო]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|რონი ჯეიმს დიო]]
 
-დიო (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
+დიო (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ  [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
 
 1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი კლოდ შნელი.
 
@@ -10,26 +10,26 @@
 1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი.
 
 ==მიმდინარე შემადგენლობა==
-*[[Ronnie James Dio]] – ვოკალი
-*[[Craig Goldy]] – გიტარა
-*[[Rudy Sarzo]] – ბას გიტარა
-*[[Simon Wright]] – დასარტყამი ინსტრუმენტები
-*[[Scott Warren]] – კლავიშები
+*[[დიო, რონი ჯეიმს]] – ვოკალი
+*[[გოლდი, ქრეიგ]] – გიტარა
+*[[სარზო რუდი]] – ბას გიტარა
+*[[ვრაითი, საიმონ]] – დასარტყამი ინსტრუმენტები
+*[[უარენ სკოტი]] – კლავიშები
 Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy-ის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
 
 ==დისკოგრაფია==
-* 1983 ''[[Holy Diver]]'' chart position 61 (US)
-* 1984 ''[[The Last in Line]]'' chart position 24 (US)
-* 1985 ''[[Sacred Heart]]'' chart position 29 (US)
-* 1986 ''[[Intermission]]'' chart position 70 (US)
-* 1987 ''[[Dream Evil]]'' chart position 43 (US)
-* 1990 ''[[Lock up the Wolves]]'' chart position 61 (US)
-* 1994 ''[[Strange Highways]]'' chart position 142 (US)
+* 1983 ''[[Holy Diver]]''
+* 1984 ''[[The Last in Line]]''
+* 1985 ''[[Sacred Heart]]''
+* 1986 ''[[Intermission]]''
+* 1987 ''[[Dream Evil]]''
+* 1990 ''[[Lock up the Wolves]]''
+* 1994 ''[[Strange Highways]]''
 * 1995 ''[[Diamonds – The Best of Dio]]''
 * 1996 ''[[Angry Machines]]''
 * 1998 ''[[Inferno - Last in Live]]''
 * 2000 ''[[Magica]]''
-* 2002 ''[[Killing the Dragon]]'' chart position 199 (US)
+* 2002 ''[[Killing the Dragon]]''
 * 2004 ''[[Master of the Moon]]''
 * 2005 ''[[Evil or Divine - Live In New York City]]''
 * 2006 ''[[Holy Diver -Live]] ''
