*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -10,12 +10,12 @@
 1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი.
 
 ==მიმდინარე შემადგენლობა==
-*[[დიო, რონი ჯეიმს]] – ვოკალი
-*[[გოლდი, ქრეიგ]] – გიტარა
-*[[სარზო რუდი]] – ბას გიტარა
-*[[ვრაითი, საიმონ]] – დასარტყამი ინსტრუმენტები
-*[[უარენ სკოტი]] – კლავიშები
-Doug Aldrich დროებით შეუერთდა Dio-ს, Craig Goldy-ის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
+*[[რონი ჯეიმს დიო]] – ვოკალი
+*[[ქრეიგ გოლდი]] – გიტარა
+*[[რუდი სარზო]] – ბას გიტარა
+*[[საიმონ ვრაითი]] – დასარტყამი ინსტრუმენტები
+*[[სკოტ უარენი]] – კლავიშები
+დოუ ალდრიხი დროებით შეუერთდა დიოს, ქრეიგ გოლდის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
 
 ==დისკოგრაფია==
 * 1983 ''[[Holy Diver]]''
