--- a/დიო.mw
+++ b/დიო.mw
@@ -1,7 +1,7 @@
 [[სურათი:Dio_logo.jpg|thumb|Ronnie James Dio|200px|right|დიოს ლოგო]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|რონი ჯეიმს დიო]]
 
-დიო (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ  [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
+'''დიო''' (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ  [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
 
 1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი კლოდ შნელი.
 
