Image deleted from WikiCommons, no source

--- a/ბალტიმორი.mw
+++ b/ბალტიმორი.mw
@@ -1,4 +1,4 @@
-[[სურათი:Baltimoremarriott.jpg|thumb|250px|ქალაქის ხედი სასტუმრო მარიოტიდან]] '''ბალტიმორი''' დამოუკიდებელი ქალაქია [[მერილენდი|მერილენდში]] [[აშშ]]-ის აღმოსავლეთ სანაპიროზე. 2005 წლის მონაცემებით მისი მოსახლეობა 641.943 ადამიანს შეადგენდა. ბალტიმორი მერილენდის უდიდესი ქალაქია და მისი კულტურული და ინდუსტრიული ცენტრია. ქალაქს სახელი მერილენდის კოლონიის დამფუძნებლის, ლორდ ბალტიმორის, პატივსაცემად დაერქვა. მე-19 საუკუნის დასაწყისში ბალტიმორი აშშ-ის სიდიდით მეორე პორტი გახდა ემიგრანტთათვის. ქალაქი დღესაც ქვეყნის ერთ-ერთი უმთავრესი საზღვაო პორტია, რომელიც ყველაზე ახლოს მდებარეობს ქვეყნის შუადასავლეთის ბაზრებთან ვინემ ნებისმიერი სხვა აღმოსავლეთ სანაპიროს ქალაქი. ბალტიმორის უბე ერთ-ერთი ყველაზე უკეთ დაცული ღრმაწლყის საზღვაო პორტია მსოფლიოში, რომელსაც ტროპიკული შტორმებისა და ქარიშხლებისგან დელმარვას ნახევარკუნძული იცავს. [[აპალაჩის მთები]] უბეს ჩრდილოეთის სიცივისგან იფარავს, რის გამოც პორტში წყალი ზამთრის განმავლობაში არ იყინება.
+ალაქის ხედი სასტუმრო მარიოტიდან]] '''ბალტიმორი''' დამოუკიდებელი ქალაქია [[მერილენდი|მერილენდში]] [[აშშ]]-ის აღმოსავლეთ სანაპიროზე. 2005 წლის მონაცემებით მისი მოსახლეობა 641.943 ადამიანს შეადგენდა. ბალტიმორი მერილენდის უდიდესი ქალაქია და მისი კულტურული და ინდუსტრიული ცენტრია. ქალაქს სახელი მერილენდის კოლონიის დამფუძნებლის, ლორდ ბალტიმორის, პატივსაცემად დაერქვა. მე-19 საუკუნის დასაწყისში ბალტიმორი აშშ-ის სიდიდით მეორე პორტი გახდა ემიგრანტთათვის. ქალაქი დღესაც ქვეყნის ერთ-ერთი უმთავრესი საზღვაო პორტია, რომელიც ყველაზე ახლოს მდებარეობს ქვეყნის შუადასავლეთის ბაზრებთან ვინემ ნებისმიერი სხვა აღმოსავლეთ სანაპიროს ქალაქი. ბალტიმორის უბე ერთ-ერთი ყველაზე უკეთ დაცული ღრმაწლყის საზღვაო პორტია მსოფლიოში, რომელსაც ტროპიკული შტორმებისა და ქარიშხლებისგან დელმარვას ნახევარკუნძული იცავს. [[აპალაჩის მთები]] უბეს ჩრდილოეთის სიცივისგან იფარავს, რის გამოც პორტში წყალი ზამთრის განმავლობაში არ იყინება.
 
 [[ნიუ-იორკი|ნიუ-იორკის]] შემდეგ, ბალტიმორი აშშ-ის მეორე ქალაქი იყო, რომელმაც 100.000-იანი ზღვარი გადალახა მოსახლეობის მიხედვით (მას მოჰყვა [[ნიუ-ორლეანი]] და [[ფილადელფია]]). 1980 წლამდე ბალტიმორი რჩებოდა ქვეყნის 10 უდიდეს ქალაქთა რიცხვში. ამჟამად ქალაქი მისი აგლომერაციის ჩათვლით მოსახლეობით უდიდეს ოცეულშია. ვინაიდან მას გარს ამავე სახელწოდების ქაუნტი აკრავს, ქალაქს ასევე ბალტიმორ სიტის უწოდებენ ხოლმე.
 
