*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -1,13 +1,16 @@
 [[სურათი:Dio_logo.jpg|thumb|Ronnie James Dio|200px|right|დიოს ლოგო]]
 [[სურათი:Dio1.jpg|thumb|Ronnie James Dio|200px|right|რონი ჯეიმს დიო]]
 
-'''დიო''' (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ  [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა ბლექ საბათი (Black Sabbath). ახლადშექმნილ ჯგუფში მან მიიწვია [[ვივიან ქემპბელი]] (Vivian Campbell) (გიტარა), მიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
+'''დიო''' (Dio) არის [[მძიმე მეტალი|მძიმე მეტალის]] ჯგუფი, შექმნილი ვოკალისტ  [[რონი ჯეიმს დიოს]] მიერ  1982 წლის ოქტომბერში, მას შემდეგ რაც მან დატოვა [[ბლექ საბათი|ბლექ საბათი]]. ახლადშექმნილ ჯგუფში მან მიიწვია ვივიან ქემპბელი (გიტარა), ჯიმი ბეინი (ბას გიტარა) და ვინი ეპისი (დასარტყამი ინსტრუმენტები).
 
-1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი Holy Diver, სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი კლოდ შნელი.
+1983 წლის მაისში გამოშვებული იქნა პირველი ალბომი ''წმინდა მყვინთავი'' (Holy Diver), სადაც დიო ერთდროულად იყო ვოკალისტი და  უკრავდა კლავიშებიან ინსტრუმენტზე. იმისათვის რომ კონცერტების დროს ვოკალისტს სცენაზე თავისუფლად ეარა და სინთეზატორთან არ მდგარიყო, ჯგუფმა შემადგენლობაში მიიღო კიდევ ერთი წევრი კლოდ შნელი.
 
-მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები The Last in Line და  Sacred Heart.
+მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები ''რიგში ბოლო'' (The Last in Line) და  ''ღვთაებრივი გული'' (Sacred Heart).
 
-1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი  Dream Evil, რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი.
+1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი ''იოცნებე ბოროტად'' (Dream Evil), რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი, რომელიც ჯგუფის დიდი ფანი იყო და ორი მოსმენის შემდეგ დაუფიქრებლად იქნა მიღებული შემადგენლობაში დიოს მიერ.
+
+1990 წელს დიომ გამოუშვა ალბომი ''გამოკეტე მგლები'' (Lock up the wolves), როლმლის შემდეგაც რონი დიო ვოკალისტად დაუბრუნდა ძველ თანაჯგუფელებს ''ბლექ საბათში'', მაგრამ მათი გაერთიანება მოკლე აღმოჩნდა,მოხერხდა მხოლოდ ერთი ალბომის ჩაწერა. ბლექ საბათის ზოგიერთი წევრების ქცევის მანერით უკმაყოფილო რონი დიომ ჯგუფი დატოვა და ხელახლა ჩაუყარა საფუძველი მეტალ ჯგუსფს - დიო.
+
 
 ==მიმდინარე შემადგენლობა==
 *[[რონი ჯეიმს დიო]] – ვოკალი
@@ -18,25 +21,33 @@
 დოუ ალდრიხი დროებით შეუერთდა დიოს, ქრეიგ გოლდის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
 
 ==დისკოგრაფია==
-* 1983 ''[[Holy Diver]]''
-* 1984 ''[[The Last in Line]]''
-* 1985 ''[[Sacred Heart]]''
-* 1986 ''[[Intermission]]''
-* 1987 ''[[Dream Evil]]''
-* 1990 ''[[Lock up the Wolves]]''
-* 1994 ''[[Strange Highways]]''
-* 1995 ''[[Diamonds – The Best of Dio]]''
-* 1996 ''[[Angry Machines]]''
-* 1998 ''[[Inferno - Last in Live]]''
-* 2000 ''[[Magica]]''
-* 2002 ''[[Killing the Dragon]]''
-* 2004 ''[[Master of the Moon]]''
-* 2005 ''[[Evil or Divine - Live In New York City]]''
-* 2006 ''[[Holy Diver -Live]] ''
+* 1983 ''Holy Diver''
+* 1984 ''The Last in Line''
+* 1985 ''Sacred Heart''
+* 1986 ''Intermission''
+* 1987 ''Dream Evil''
+* 1990 ''Lock up the Wolves''
+* 1994 ''Strange Highways''
+* 1995 ''Diamonds – The Best of Dio''
+* 1996 ''Angry Machines''
+* 1998 ''Inferno - Last in Live''
+* 2000 ''Magica''
+* 2002 ''Killing the Dragon''
+* 2004 ''Master of the Moon''
+* 2005 ''Evil or Divine - Live In New York City''
+* 2006 ''Holy Diver - Live''
+
+==აგრეთვე მოინახულეთ==
+* ელფი
+* რეინბოუ
+* დიფ ფარფლი
+* ბლექ საბათი
 
 
 გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, მოინახულოთ მოგვიანებით!
 გთხოვთ დროებით მაპატიოთ არაქართული ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
+
+--[[მომხმარებელი:Tornike|Tornike]] 10:57, 7 აპრილი 2006 (UTC)
 
 [[en: Dio]]
 [[fr:Dio]]
