*Empty MediaWiki Message*

--- a/ვიტორიო_ამადეო_III_(სარდინია).mw
+++ b/ვიტორიო_ამადეო_III_(სარდინია).mw
@@ -1,3 +1,4 @@
+[[სურათი:VictorAmadeusIII.jpg|thumb|150px|ვიტორიო ამადეო III მარია]]
 '''ვიტორიო ამადეო III მარია''' ([[იტალიური ენა|იტალ.]]: Vittorio Amadeo III Maria) (* [[26 ივნისი]] [[1726]], [[ტურინი]]; † [[16 ოქტომბერი]] [[1796]], [[მონჩალერი]]) – [[პიემონტ-სარდინიის სამეფო|პიემონტ-სარდინიის]] მეფე და [[სავოია|სავოიის]] ჰერცოგი.
 
 
