--- a/შუცშტაფელი.mw
+++ b/შუცშტაფელი.mw
@@ -68,6 +68,20 @@
 
 
 
+===«სს»-ის მონაწილეობა საომარ მოქმედებებში===
+[[1938]] წლის [[13 მარტი|13 მარტს]][[ავსტრიის ანშლუსი|ავსტრიის ანშლუსში]] «სს»-ის ნაწილებმაც მიიღეს მონაწილეობა. მათ მიერ [[ვენაში]] დაარსებულ იქნა [[სს-ის შტანდარტი]] „ფიურერი“.
+
+იმავე წლის ოქრომბერში «სს»-ის სარეზერვო ჯარები [[ჩეხოსლოვაკია|ჩეხოსლოვაკურ]] [[ზუდეტები|ზუდეტენლანდში]] შევიდნენ. ცოტა ხნის შემდეგ ჩეხესლოვაკიამ არსებობა შეწყვიტა. [[ჩეხეთი]] ახლად დაარსებული [[ბოჰემიის და მორავიის რაიხსპროტექტორატი|ბოჰემიის და მორავიის რაიხსპროტექტორატის]] შემადგენლობაში შევიდა და «სს»-ს დავალება მიეცა ჩაეხშო ჩეხური იატაკქვეშა მოძრაობა. «[[რსჰა]]»-ს შეფი [[ჰაიდრიხი, რაინჰარდ|რაინჰარდ ჰაიდრიხი]] დაპყრობილი მიწების რაიხსპროტექტორად დაინიშნა და მის მიერ გამოჩენილი სისასტიკისათვის სულ მალე მეტსახელად „პრაღელი ყასაბი“ შეარქვეს.
+
+[[1939]] წლის შემოდგომაზე ლაიბშტანდარტი, სარეზერვო ჯარები და მკვდარი თავის ქალას შენაერთები გაერთიანებულ იქნენ ერთ ორგანიზაციად - «[[ვაფენ-სს]]»-ად. ჰიმლერს სურდა «სს» გადაექცია სახელმწიფოს დამცავ სპეციალურ არმიად, რომელიც მოაწილეობას მიიღებდა როგორც შინაგანი ისევე გარე მტრის წინაარმდეგ ბრძოლაში.  მიუხედავად «სს»-ის სხვადასხვა ქვეორგანიზაციებს შორის დიფერენციისა იგი მაინც ერთი იდეოლოგიური მიზნის მიმდევარი ძალა იყო. აქედან გამომდინარე მომავალი «სს»-ის ოფიცრები საერთო იდეოლოგიურ-პოლიტიკურ აღზრდას იღებდნენ [[სს-ის იუნკერთა სკოლა|სს-ის იუნკერთა სკოლებში]] [[ბად ტიოლცი|ბად ტიოლცში]] და [[ბრაუნშვაიგი (ქალაქი)|ბრაუნშვაიგში]]. იუნკრები საერთო განატლებას იღებდნენ და არავითარი მნიშვნელობა არ ჰქონდა შემდეგში თუ სად განაწილდებოდნენ: სს-ის ხელმძრვანელობაში, სამხედრო ფრონტზე, «სდ»-ში თუ კონცბანაკებში.
+
+
+
+===მონაწილეობა სამხედრო დანაშაულში და ჰოლოკოსტში===
+მეორე მსოფლიო ომის პერიოდში «ვაფენ-სს»-ის ნაწილები მონაწილეობას იღებდენ უამრავ სამხედრო დანაშაულში, როგორიცაა: სამხედრო ტყვეტა წამება, დაპყრობილი ქვეყნების მშვიდობიანი მოსახლეობის მასობრივი ეკზეკუცია, აღმოსავლეთ ევროპის დაპყრობილი ქვეყნებიდან ადგილობრივი მოსახლეობის აყრა და სხვა. «[[ვფჰა]]»-ს საშუალების «სს» განაგებდა საკონცენტრაციო და ადამიანთა ფიზიკურად გასანადგურებელ ბანაკებს, რომლებსაც ე.წ. «სს-ის მკვდარი თავის ქალას» ვახშტურმბანები მეთაურობდნენ.
+
+[[ნიურნბერგის პროცესი|ნიურნბერგის პროცესზე]] «სს» და მისი შემადგენელი ნაწილები: «[[ვაფენ-სს]]», «[[სს-ის მკვდარი თავის ქალას შენაერთები]]» და «[[სდ]]», როგორც «[[ნსდაპ]]»-ის ნაწილი და პოლიტტერორის მთავარი ინსტრუმენტი „დანაშაულებრივ ორგანიზაციად“ იქნენ აღიარებულნი. გამონაკლისი დაშვებულ იქნა «სს-ის მხედრების» მიმართ.
+
 ==დისტანცირება==
 ნაციონალ-კონსერვატიული და მემარჯვენე ექსტრემისტული დაჯგუფეფბები, ისევე როგორც «სს»-ის ყოფილი წევრები უარყოფენ «სს»-ის და «[[ვაფენ-სს]]»-ის ყველა წევრის მონაწილეობას სამხედრო დანაშაულებებში და [[ჰოლოკოსტი|ჰოლოკოსტში]].
 
