--- a/ვიტორიო_ამადეო_III_(სარდინია).mw
+++ b/ვიტორიო_ამადეო_III_(სარდინია).mw
@@ -24,3 +24,12 @@
 
 ==იხილე აგრეთვე==
 * [[პიემონტ-სარდინიის მეფეთა სია]]
+
+
+[[de:Vittorio Amadeo III.]]
+[[en:Victor Amadeus III of Sardinia]]
+[[fr:Victor-Amédée III de Sardaigne]]
+[[it:Vittorio Amedeo III di Savoia]]
+[[ja:ヴィットーリオ・アメデーオ3世]]
+[[nl:Victor Amadeus III van Sardinië]]
+[[pt:Vítor Amadeu III da Sardenha]]
