--- a/როკუძიო.mw
+++ b/როკუძიო.mw
@@ -1,3 +1,10 @@
-'''როკუჯო-[[ტენო]]''' ([[იაპონური ენა|იაპონ.]] --- ) (* [[28 დეკემბერი]] [[1164]]; † [[23 აგვისტო]] [[1176]]) – [[იაპონია|იაპონიის]] იმპერატორი [[1165]]-[[1168]] წლებში.
+'''როკუჯო-[[ტენო]]''' ([[იაპონური ენა|იაპონ.]] 六条天皇 ) (* [[28 დეკემბერი]], [[1164]]; † [[23 აგვისტო]], [[1176]]) – [[იაპონია|იაპონიის]] იმპერატორი [[1165]]-[[1168]] წლებში.
 
 როკუჯო იმპერატორ [[ნიჯო (იაპონია)|ნიჯოს]] ვაჟი იყო და უკვე 1 წლის ასაკში, [[1165]] წლის [[3 აგვისტო|3 აგვისტოს]] ტახტზე ავიდა.  ორწლინახევრის შემდეგ [[1168]] წლის [[30 მარტი|30 მარტს]] იგი ტახტზე მისმა უფროსმა ძმამ [[ტაკაკურა (იაპონია)|ტაკაკურამ]] შეცვალა. იმპერატორმა როკუჯომ 13 წლის ასაკამდე იცოცხლა. მისი მმართველობის დროს რეგენტები ბაბუამისი, ექს-იმპერატორი [[გო-შირაკავა (იაპონია)|გო-შირაკავა]] და ცნობილი პოლიტიკოსი [[ტაირა ნო კიიომორი]] იყვნენ.
+
+
+[[de:Rokujō]]
+[[cs:Rokudžó]]
+[[en:Emperor Rokujo]]
+[[ja:六条天皇]]
+[[zh:六條天皇]]
