--- a/ვიტორიო_ამადეო_III_(სარდინია).mw
+++ b/ვიტორიო_ამადეო_III_(სარდინია).mw
@@ -26,6 +26,12 @@
 * [[პიემონტ-სარდინიის მეფეთა სია]]
 
 
+
+[[კატეგორია:პიემონტ-სარდინიის მეფეები]]
+[[კატეგორია:სავოიის ჰერცოგები]]
+[[კატეგორია:დაბადებული 1726]] 
+[[კატეგორია:გარდაცვლილი 1796]]
+
 [[de:Vittorio Amadeo III.]]
 [[en:Victor Amadeus III of Sardinia]]
 [[fr:Victor-Amédée III de Sardaigne]]
