*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -7,11 +7,20 @@
 
 მომდევნო წლებში დიო მრალალ კონცერტს ატარებდა, ჩაწერილი იქნა ახალი ალბომები ''რიგში ბოლო'' (The Last in Line) და  ''ღვთაებრივი გული'' (Sacred Heart).
 
-1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი ''იოცნებე ბოროტად'' (Dream Evil), რის შემდეგაც ჯგუფის შემადგენლობა კიდევ ერთხელ შეიცვალა. მიიღეს 19 წლის გიტარისტი როუან რობერტსონი, რომელიც ჯგუფის დიდი ფანი იყო და ორი მოსმენის შემდეგ დაუფიქრებლად იქნა მიღებული შემადგენლობაში დიოს მიერ.
+1986 წელს ვივიან ქემპბელი ჯგუფიდან წავიდა, ის  შეცვალა გიტარისტმა ქრეიგ გოლდიმ. ახალი შემადგენლობით ჩაწერილი იქნა ალბომი ''იოცნებე ბოროტად'' (Dream Evil), რის შემდეგაც ჯგუფის შემადგენლობა კვლავ შეიცვალა. ჯგუფში მიიღეს 19 წლის გიტარისტი როუან რობერტსონი, რომელიც ამთი დიდი ფანი იყო, ის ორი მოსმენის შემდეგ დაუფიქრებლად იქნა მიღებული დიოს მიერ.
 
 1990 წელს დიომ გამოუშვა ალბომი ''გამოკეტე მგლები'' (Lock up the wolves), როლმლის შემდეგაც რონი დიო ვოკალისტად დაუბრუნდა ძველ თანაჯგუფელებს ''ბლექ საბათში'', მაგრამ მათი გაერთიანება მოკლე აღმოჩნდა,მოხერხდა მხოლოდ ერთი ალბომის ჩაწერა. ბლექ საბათის ზოგიერთი წევრების ქცევის მანერით უკმაყოფილო რონი დიომ ჯგუფი დატოვა და ხელახლა ჩაუყარა საფუძველი მეტალ ჯგუსფს - დიო.
 
+აღდგენილ ჯგუფში გიტარისტად ახალი წევრი თრეისი ჯი (Tracy G) მიიღეს. 1994-1999 წლებში ჩაწერილ ყველა ალბომს ''უცნობი გზები''  (Strange Highways), ''გაბრაზებული მანქანები'' (Angry Machines) და  ''ჯოჯოხეთი '' (Inferno - Last in Live) ეტყობა რონი დიოს განაწყენებული ტონი და ისინი თავისი სიმძიმით გამოირჩევა. როგორც ფანების თვალსაზრისით, ასევე თვით ვოკალისტის სიტყვებით, ალბომი  ''გაბრაზებული მანქანები'' არის დიოს მიერ ჩაწერლი ყველაზე ცუდი ნაკრები.
 
+2000 წელს ჯგუფს დაუბრუნდა გიტარისტი ქრეიგ გოლდი და ჩაწერილი იქნა ერთ-ერთი საუკეთესო ალბომი მეჯიქა (magica), თუმცა გოლდიმ მალვე დატოვა დიო და შემდგომი ალბომის - დრაკონის მკვლელობა (Killing the Dragon) ჩასაწერად 2002 წელს ჯგუფმა გიტარისტად დოუ ალდრიხი მიიწვია.
+
+აღსანიშნავია, რომ ორჯერ წასული გოლდი 2003-2004 წლებში კვლლავ დაუბრუნდა ჯგუფს და დიომ კიდევ ერთი დიდი წარმატების მომტანი ალბომი  ''მთვარის მფლობელი'' (Master of the Moon)შესთავაზა თავის ფანებს.
+
+2005 წელს გამოშვებული იქნა ნიუ-იორკში ცოცხლად ჩაწერილი ალბომი ''ბოროტი ან ღვთაებრივი'' (Evil or Divine - Live In New York City). 2005 წელს დიომ უამრავი გასტროლი ჩაატარა სამხრეთ ამერიკაში, იაპონიაში, რუსეთსა და ევროპაში.
+
+ამ წელს ჯგუფს გასტროლებზე დაგეგმილი აქვს  1983 წლის ალბომის ''წმინდა მყვინთავი''-ს  სრული შესრულება. ახაი ალბომს  კი ფანები სავარაუდოდ 2006 წლის მეორე ნახევრისკენ უნდა ელოდონ.
+ 
 ==მიმდინარე შემადგენლობა==
 *[[რონი ჯეიმს დიო]] – ვოკალი
 *[[ქრეიგ გოლდი]] – გიტარა
@@ -21,21 +30,21 @@
 დოუ ალდრიხი დროებით შეუერთდა დიოს, ქრეიგ გოლდის მიერ რუსეთში მიმდინარე გასტროლების დროს მიღებული ხელის ტრამვის გამო.
 
 ==დისკოგრაფია==
-* 1983 ''Holy Diver''
-* 1984 ''The Last in Line''
-* 1985 ''Sacred Heart''
-* 1986 ''Intermission''
-* 1987 ''Dream Evil''
-* 1990 ''Lock up the Wolves''
-* 1994 ''Strange Highways''
-* 1995 ''Diamonds – The Best of Dio''
-* 1996 ''Angry Machines''
-* 1998 ''Inferno - Last in Live''
-* 2000 ''Magica''
-* 2002 ''Killing the Dragon''
-* 2004 ''Master of the Moon''
-* 2005 ''Evil or Divine - Live In New York City''
-* 2006 ''Holy Diver - Live''
+* 1983 ''წმინდა მყვინთავი  (Holy Diver)''
+* 1984 ''რიგში ბოლო (The Last in Line)''
+* 1985 ''ღვთაებრივი გული (Sacred Heart)''
+* 1986 ''შეყოვნება/პაუზა (Intermission)''
+* 1987 ''იოცნებე ბოროტად (Dream Evil)''
+* 1990 ''გამოკეტე მგლები (Lock up the Wolves)''
+* 1994 ''უცნობი გზები (Strange Highways)''
+* 1995 ''ბრილიანტები - დიოს საუკეთესო (Diamonds – The Best of Dio)''
+* 1996 ''გაბრაზებული მანქანები (Angry Machines)''
+* 1998 ''ჯოჯოხეთი - ბოლო ცოცხლად (Inferno - Last in Live)''
+* 2000 ''მეჯიქა (Magica)''
+* 2002 ''დრაკონის მკვლელობა (Killing the Dragon)''
+* 2004 ''მთვარის მფლობელი  (Master of the Moon)''
+* 2005 ''ბოროტი ან ღვთაებრივი  - ცოცხლად ნიუ-იორკში(Evil or Divine - Live In New York City)''
+* 2006 ''წმინდა მყვინთავი - ცოცხლად (Holy Diver - Live)''
 
 ==აგრეთვე მოინახულეთ==
 * ელფი
