*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -52,11 +52,10 @@
 * დიფ ფარფლი
 * ბლექ საბათი
 
+გვერდზე საბოლოო სახეს რამდენიმე დღეში მიიღებს, მოინახულოთ მოგვიანებით!
+გთხოვთ დროებით მაპატიოთ არაქართული და შესასწორებელი ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
-გვერდზე მუშაობა რამოდენიმე დღეში დასრულდება, მოინახულოთ მოგვიანებით!
-გთხოვთ დროებით მაპატიოთ არაქართული ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
---[[მომხმარებელი:Tornike|Tornike]] 10:57, 7 აპრილი 2006 (UTC)
 
 [[en: Dio]]
 [[fr:Dio]]
