*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -19,7 +19,7 @@
 
 2005 წელს გამოშვებული იქნა ნიუ-იორკში ცოცხლად ჩაწერილი ალბომი ''ბოროტი ან ღვთაებრივი'' (Evil or Divine - Live In New York City). 2005 წელს დიომ უამრავი გასტროლი ჩაატარა სამხრეთ ამერიკაში, იაპონიაში, რუსეთსა და ევროპაში.
 
-ამ წელს ჯგუფს გასტროლებზე დაგეგმილი აქვს  1983 წლის ალბომის ''წმინდა მყვინთავი''-ს  სრული შესრულება. ახაი ალბომს  კი ფანები სავარაუდოდ 2006 წლის მეორე ნახევრისკენ უნდა ელოდონ.
+ამ წელს ჯგუფს გასტროლებზე დაგეგმილი აქვს  1983 წლის ალბომის ''წმინდა მყვინთავი''-ს  სრული შესრულება. ახალ ალბომს  კი ფანები სავარაუდოდ 2006 წლის მეორე ნახევრისკენ უნდა ელოდონ.
  
 ==მიმდინარე შემადგენლობა==
 *[[რონი ჯეიმს დიო]] – ვოკალი
