--- a/როკუძიო.mw
+++ b/როკუძიო.mw
@@ -3,6 +3,12 @@
 როკუჯო იმპერატორ [[ნიჯო (იაპონია)|ნიჯოს]] ვაჟი იყო და უკვე 1 წლის ასაკში, [[1165]] წლის [[3 აგვისტო|3 აგვისტოს]] ტახტზე ავიდა.  ორწლინახევრის შემდეგ [[1168]] წლის [[30 მარტი|30 მარტს]] იგი ტახტზე მისმა უფროსმა ძმამ [[ტაკაკურა (იაპონია)|ტაკაკურამ]] შეცვალა. იმპერატორმა როკუჯომ 13 წლის ასაკამდე იცოცხლა. მისი მმართველობის დროს რეგენტები ბაბუამისი, ექს-იმპერატორი [[გო-შირაკავა (იაპონია)|გო-შირაკავა]] და ცნობილი პოლიტიკოსი [[ტაირა ნო კიიომორი]] იყვნენ.
 
 
+
+[[კატეგორია:იაპონიელები]]
+[[კატეგორია:იაპონიის იმპერატორები]]
+[[კატეგორია:დაბადებული  1164]]
+[[კატეგორია:გარდაცვლილი 1165]]
+
 [[de:Rokujō]]
 [[cs:Rokudžó]]
 [[en:Emperor Rokujo]]
