*Empty MediaWiki Message*

--- a/როკუძიო.mw
+++ b/როკუძიო.mw
@@ -4,7 +4,7 @@
 
 
 
-[[კატეგორია:იაპონიელები]]
+[[კატეგორია:იაპონელები]]
 [[კატეგორია:იაპონიის იმპერატორები]]
 [[კატეგორია:დაბადებული  1164]]
 [[კატეგორია:გარდაცვლილი 1165]]
