*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -55,7 +55,8 @@
 გვერდზე საბოლოო სახეს რამდენიმე დღეში მიიღებს, მოინახულოთ მოგვიანებით!
 გთხოვთ დროებით მაპატიოთ არაქართული და შესასწორებელი ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
-
+[[Category:როკ-მუსიკა]]
+[[Category:მეტალი_მუსიკა]]
 
 [[en: Dio]]
 [[fr:Dio]]
