*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -40,11 +40,11 @@
 * 1995 ''ბრილიანტები - დიოს საუკეთესო (Diamonds – The Best of Dio)''
 * 1996 ''გაბრაზებული მანქანები (Angry Machines)''
 * 1998 ''ჯოჯოხეთი - ბოლო ცოცხლად (Inferno - Last in Live)''
-* [[2000]] ''მეჯიქა (Magica)''
-* [[2002]] ''დრაკონის მკვლელობა (Killing the Dragon)''
-* [[2004]] ''მთვარის მფლობელი  (Master of the Moon)''
-* [[2005]] ''ბოროტი ან ღვთაებრივი  - ცოცხლად ნიუ-იორკში(Evil or Divine - Live In New York City)''
-* [[2006]] ''წმინდა მყვინთავი - ცოცხლად (Holy Diver - Live)''
+* 2000 ''მეჯიქა (Magica)''
+* 2002 ''დრაკონის მკვლელობა (Killing the Dragon)''
+* 2004 ''მთვარის მფლობელი  (Master of the Moon)''
+* 2005 ''ბოროტი ან ღვთაებრივი  - ცოცხლად ნიუ-იორკში(Evil or Divine - Live In New York City)''
+* 2006 ''წმინდა მყვინთავი - ცოცხლად (Holy Diver - Live)''
 
 ==აგრეთვე მოინახულეთ==
 * ელფი
@@ -55,8 +55,8 @@
 გვერდზე საბოლოო სახეს რამდენიმე დღეში მიიღებს, მოინახულოთ მოგვიანებით!
 გთხოვთ დროებით მაპატიოთ არაქართული და შესასწორებელი ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
-[[კატეგორია:როკ-მუსიკა]]
-[[კატეგორია:მეტალი_მუსიკა]]
+[[Category:როკ-მუსიკა]]
+[[Category:მეტალი მუსიკა]]
 
 [[en: Dio]]
 [[fr:Dio]]
