*Empty MediaWiki Message*

--- a/ედუარდ_კოკოითი.mw
+++ b/ედუარდ_კოკოითი.mw
@@ -1,5 +1,5 @@
 [[სურათი:Kokoity.jpg|thumb|ედუარდ კოკოითი]]
-'''ედუარდ ჯაბეს ძე კოკოითი''' (ოს.: Кокойты Джабейы фырт Эдуард) (*[[31 ოქტომბერი]], 1964]]) ე.წ. სამხრეთ ოსეთის დე ფაქტო პრეზიდენტი.
+'''ედუარდ ჯაბეს ძე კოკოითი''' (ოს.: Кокойты Джабейы фырт Эдуард) (*[[31 ოქტომბერი]], [[1964]]) ე.წ. სამხრეთ ოსეთის დე ფაქტო პრეზიდენტი.
 
 დაიბადა [[ცხინვალი|ცხინვალში]], დაამთავრა მე-5 საშუალო სკოლა. მცირე ხანი რადიოსაკვანძო განყოფილებაში ელექტრომექანიკოსად მუშაობდა. 1980 წელს საქართველოს სსრ-ის ჩემპიონი ხდება თავისუფალ ჭიდაობაში; მოგვიანებით - სპორტის ოსტატი. 1988 წელს დაამთავრა სამხრეთ ოსეთის ოლქის პედაგოგიური ინსტიტუტის ფიზკულტურის მასწავლებლის ფაკულტეტი. ინსტიტუტში ირჩევენ კომკავშირის კომიტეტის მდივნად, რის შემდეგ კომკავშირის სტრუქტურებში აგრძელებს მუშაობას.
 
