*Empty MediaWiki Message*

--- a/დიო.mw
+++ b/დიო.mw
@@ -55,8 +55,8 @@
 გვერდზე საბოლოო სახეს რამდენიმე დღეში მიიღებს, მოინახულოთ მოგვიანებით!
 გთხოვთ დროებით მაპატიოთ არაქართული და შესასწორებელი ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
 
-[[Category:როკ-მუსიკა]]
-[[Category:მეტალი მუსიკა]]
+[[კატეგორია:როკ-მუსიკა]]
+[[კატეგორია:მეტალი მუსიკა]]
 
 [[en: Dio]]
 [[fr:Dio]]
