--- a/ედუარდ_კოკოითი.mw
+++ b/ედუარდ_კოკოითი.mw
@@ -13,7 +13,7 @@
 
 კოკოითს საქართველოს მთავრობასთან მტკიცე პოზიცია უჭირავს გაერთიანების წინააღმდეგ, თუმცა მზადყოფნას გამოთქვამს სამშვიდობო მოლაპარაკებაზე იმ შემთხვევაში თუ სამხრეთ ოსეთს საქართველო დამოუკიდებელ სახელმწიფოდ აღიარებს (რასაც თბილისის მთავრობა კატეგორიულად უარჰყოფს).
 
-[[კატეგორია:ქართველი პოლიტიკოსები]]
+[[კატეგორია:საქართველოში მოღვაწე პოლიტიკოსები]]
 
 [[de:Eduard Dschabejewitsch Kokoity]]
 [[en:Eduard Kokoity]]
