--- a/დიო.mw
+++ b/დიო.mw
@@ -47,13 +47,12 @@
 * 2006 ''წმინდა მყვინთავი - ცოცხლად (Holy Diver - Live)''
 
 ==აგრეთვე მოინახულეთ==
-* ელფი
-* რეინბოუ
-* დიფ ფარფლი
-* ბლექ საბათი
+* [[ელფი]]
+* [[რეინბოუ]]
+* [[დიფ ფარფლი]]
+* [[ბლექ საბათი]]
 
-გვერდზე საბოლოო სახეს რამდენიმე დღეში მიიღებს, მოინახულოთ მოგვიანებით!
-გთხოვთ დროებით მაპატიოთ არაქართული და შესასწორებელი ტექსტი, საბოლოო ვერსიაში ყველაფერი გამოსწორდება!
+{{მუშავდება}}
 
 [[კატეგორია:როკ-მუსიკა]]
 [[კატეგორია:მეტალი მუსიკა]]
