*Empty MediaWiki Message*

--- a/შავი_ზღვა.mw
+++ b/შავი_ზღვა.mw
@@ -7,6 +7,7 @@
 
 მნიშვნელოვანი ქალაქები შავი ზღვის სანაპიროზე არის: [[სტამბოლი]] (ყოფილი [[კონსტანტინოპოლი]]), [[ბურგასი]], [[ვარნა]], [[კონსტანცა]], [[იალტა]], [[ოდესა]], [[სევასტოპოლი]], [[ქერჩი]], [[ნოვოროსიისკი]], [[სოჭი]], [[სოხუმი]], [[ფოთი]], [[ბათუმი]], [[ტრაბზონი]] და [[სამსუნი]].
 
+{{გეოგრაფია}}
 [[კატეგორია:ზღვები]]
 [[კატეგორია:ატლანტის ოკეანის აუზი]]
 
