--- a/იბერია.mw
+++ b/იბერია.mw
@@ -1,10 +1,17 @@
 '''იბერია''', ''ივერია'', აღმოსავლეთ და სამხრეთ საქართველოს და ამტერიტორიაზე არსებული სახელმწიფოს სახელწოდება  ანტიკურ და ბიზანტიურ წყაროებში. გვიანდელი და შუა საუკუნეების, ახალი და უახლესი დროის ქართულ წყაროებსა და ლიტერატურაში "ივერია" იხმარებოდა მთელი საქართველოს აღსანიშნავად, ამასთან, აღმოსავლეთ საქართველოს უწოდებდნენ ზემო ივერიას, ხოლო დასავლეთ საქართველოს - ქვემო ივერიას. ამ სახელწოდებით წარმომავლობა ნათელი არ არის. იგი გაჩნდა უცხოენოვან (ბერძნულ) გარემოში ელინისტურ ხანაში.ზოგი მას ქართულ "იმერს" (იქითა მხარე) უკავშირებს და მიიჩნევს დასავლეთ საქართველოში ლიხსიქითა ან მესხეთის მთებსიქითა ქვეყნის აღსანიშნავად შექმნილ ტერმინად, ზოგი კი უკავშირებს ძვ. წ. V საუკუნის ბერძენ ავტორებთან დამოწმებულ [[სასპერები|სასპერების]] სახელს  (მათი სახელი შემორჩა ისტორიულ [[სპერი|სპერის]] ოლქს).
 
-ბერძნებთან იბერიად ცნობილი ქვეყანა ადგილობრივ "ქართლად" იწოდებოდა, ელინისტური ხანიდან იბერია მუდამ ერთ გარკვეულ პოლიტიკურ ერთეულს (სახელმწიფოს) აღნისნავდა, რომელიც აღმოსავლეთ სამხრეთ საქართველოს ვრცელ მიწა-წყალს მოიცავდა. ამ ტერიტორიაზე უმეტესად აღმოსავლურ-ქართული ტომები ([[ქართები]]-[[იბერები]]) სახლობდნენ. წინაელინისტურ ხანაში აქ მრავალი სატომთაშორისო გაერთიანება (ტომთა კავშირი) და ადრინდელი კლასობრივი სახელმწიფოებრივი წარმონაქმნი იყო. ამ დროს აქაური მოსახლეობის პოლიტიკურ ცხოვრებაში აქტიური როლი უნდა ეთამაშა მესხების ქართველ ტომებს, რომლებიც ადრე ხეთური კულტურის გავლენის სფეროში შედიოდნენ და მცირე აზიის ჩრდილოეთ-აღმოსავლეთ ნაწილში ცხოვრობდნენ. აქემენიდურ ხანაში ამ რაიონში არსებული ქართული გაერთიანება ცნობილია [[არიან-ქართლი|არიან-ქართლის]] ("სპარსეთის ქართლის") სახელით და სპარსეთის ფარგლებში უშუალოდ შემავალ აღმოსავლურ-ქართულ გაერთიანებას გელისხმობს.
+ბერძნებთან იბერიად ცნობილი ქვეყანა ადგილობრივ "ქართლად" იწოდებოდა, ელინისტური ხანიდან იბერია მუდამ ერთ გარკვეულ პოლიტიკურ ერთეულს (სახელმწიფოს) აღნისნავდა, რომელიც აღმოსავლეთ სამხრეთ საქართველოს ვრცელ მიწა-წყალს მოიცავდა. ამ ტერიტორიაზე უმეტესად აღმოსავლურ-ქართული ტომები ([[ქართები]]-[[იბერები]]) სახლობდნენ. წინაელინისტურ ხანაში აქ მრავალი სატომთაშორისო გაერთიანება (ტომთა კავშირი) და ადრინდელი კლასობრივი სახელმწიფოებრივი წარმონაქმნი იყო. ამ დროს აქაური მოსახლეობის პოლიტიკურ ცხოვრებაში აქტიური როლი უნდა ეთამაშა მესხების ქართველ ტომებს, რომლებიც ადრე ხეთური კულტურის გავლენის სფეროში შედიოდნენ და მცირე აზიის ჩრდილოეთ-აღმოსავლეთ ნაწილში ცხოვრობდნენ. აქემენიდურ ხანაში ამ რაიონში არსებული ქართული გაერთიანება ცნობილია [[არიან-ქართლი|არიან-ქართლის]] ("სპარსეთის ქართლის") სახელით და სპარსეთის ფარგლებში უშუალოდ შემავალ აღმოსავლურ-ქართულ გაერთიანებას გულისხმობს.
+
+ძვ. წ. IV-III საუკუნეების მიჯნაზე მან შეძლო თავისი ძალაუფლების გავრცელება შიდა ქართლზეც. შეიქმნა დიდი სახელმწიფო გაერთიანება, რომლის ცენტრი მცხეთის მიდამოებში მდებარეობდა. თვით მცხეთის სახელიც მესხთა ტომის სახელიდან უნდა იყოს ნაწარმოები. მცირეაზიელ მესხებს უნდა მოეტანათ აქ ზოგიერთი ხეთური თვთაების კულრი (არმაზის, ზადენის), რომლებიც უზენაეს ღმერთებად იქცნენ. მათ სახელზე მცხეთის მიდამოებში ააგეს ორი დიდი ციხესიმაგრე - [[არმაზციხე]] და ზადენციხე.
+
+ძვ. წ. III საუკუნის დასაწყისში იბერია სამეფოში ძალაუფლება ხელში ჩაიგდო ადგილობრივი წარმოშობის პირმა ("მცხეთის მამასახლისების" საგვარეულოს წევრმა) [[ფარნავაზი|ფარნავაზმა]], რომელიც იბერიის მეფეთა ახალი დინასტიის - ფარნავაზიანების - ფუძემდებელი გახდა. ფარნავაზისა და მისი უახლოესი მემკვიდრეების დროს (ძვ. წ. III ს.) იბერიამ დიდ ძლიერებას მიაღწია და საკმაოდ ვრცელი სახელმწიფო გახდა. შიდა ქართლის, კახეთისა და მესხეთის გარდა მასში შედიოდა დასავლეთ საქართველოს ნაწილი ([[არგვეთი]], [[აჭარა]]). მის შემადგენლობაში ივარაუდება ისტორიული ოლქები - [[გოგარენე]], [[ხორძენე]] და პარიადრის მთის კალთები (ისინი, [[სტრაბონი|სტრაბონის]] ცნობით, მხოლოდ ძვ. წ. II-I საუკუნეებში ჩამოაჭრეს სომხეთის სამეფოებმა იბერებს). 
 
 
 
 
 
 
-{{ესკიზი}}
+
+
+
+{{მუშავდება}}
