*Empty MediaWiki Message*

--- a/აზოვის_ზღვა.mw
+++ b/აზოვის_ზღვა.mw
@@ -1,7 +1,7 @@
 [[Image:Sea of Azov-NASA.jpg|thumb|300px|თხელი აზოვის ზღვა მკვეთრად გამოირჩევა შავი ზღვისგან.]]
 '''აზოვის ზღვა''' (რუს.: Азо́вское мо́ре, უკრ.: Азо́вське мо́ре)  [[შავი ზღვა|შავი ზღვის]] ჩრდილოეთ განშტოებაა და მას [[ქერჩის სრუტე|ქერჩის სრუტით]] უკავშირდება. ჩრდილოეთით მას ესაზღვრება [[უკრაინა]], აღმოსავლეთით [[რუსეთი]], დასავლეთით კი [[ყირიმის ნახევარკუნძული]].
 
-აზოვის ზღვის წარმოქმნის თარიღად მიიჩნევა ძვ.წ. 5600 [[შავი ზღვის დატბორვის თეორია|შავი ზღვის დატბორვის თეორიის მიხედვით]]. ამ არეალში არსებობს ნეოლითური ნამოსახლარის ნიშნები, რომელიც ამჟამად ზღვით არის დაფარული. აზოვი ანტიკურ ხანაში ცნობილი იყო სახელით ''მეოტიის ტბა'' ან ზღვა (ბერძ.: ἡ Μαιῶτης λίμνη და ლათ.: Palus Maeotis).
+აზოვის ზღვის წარმოქმნის თარიღად მიიჩნევა ძვ.წ. 5600 [[შავი ზღვის დატბორვის თეორია|შავი ზღვის დატბორვის თეორიის]] მიხედვით. ამ არეალში არსებობს ნეოლითური ნამოსახლარის ნიშნები, რომელიც ამჟამად ზღვით არის დაფარული. აზოვი ანტიკურ ხანაში ცნობილი იყო სახელით ''მეოტიის ტბა'' ან ზღვა (ბერძ.: ἡ Μαιῶτης λίμνη და ლათ.: Palus Maeotis).
 
 ამჟამინდელი სახელი პოპულარული წარმოდგენით მომდინარეობს პოლოვციელი პრინცი აზუმისგან, რომელიც ამ რეგიონში მდებარე ქალაქის თავდაცვის დროს იქნა მოკლული 1067 წელს. მკვლევართა აზრით ზღვის სახელი დაკავშირებულია ქალაქ აზოვთან, ან აზაკთან, რაც თურქულად ”დაბალს” ნიშნავს, მისი მდებარეობის მითითებით.
 
