*Empty MediaWiki Message*

--- a/იბერია.mw
+++ b/იბერია.mw
@@ -4,7 +4,19 @@
 
 ძვ. წ. IV-III საუკუნეების მიჯნაზე მან შეძლო თავისი ძალაუფლების გავრცელება შიდა ქართლზეც. შეიქმნა დიდი სახელმწიფო გაერთიანება, რომლის ცენტრი მცხეთის მიდამოებში მდებარეობდა. თვით მცხეთის სახელიც მესხთა ტომის სახელიდან უნდა იყოს ნაწარმოები. მცირეაზიელ მესხებს უნდა მოეტანათ აქ ზოგიერთი ხეთური თვთაების კულრი (არმაზის, ზადენის), რომლებიც უზენაეს ღმერთებად იქცნენ. მათ სახელზე მცხეთის მიდამოებში ააგეს ორი დიდი ციხესიმაგრე - [[არმაზციხე]] და ზადენციხე.
 
-ძვ. წ. III საუკუნის დასაწყისში იბერია სამეფოში ძალაუფლება ხელში ჩაიგდო ადგილობრივი წარმოშობის პირმა ("მცხეთის მამასახლისების" საგვარეულოს წევრმა) [[ფარნავაზი|ფარნავაზმა]], რომელიც იბერიის მეფეთა ახალი დინასტიის - ფარნავაზიანების - ფუძემდებელი გახდა. ფარნავაზისა და მისი უახლოესი მემკვიდრეების დროს (ძვ. წ. III ს.) იბერიამ დიდ ძლიერებას მიაღწია და საკმაოდ ვრცელი სახელმწიფო გახდა. შიდა ქართლის, კახეთისა და მესხეთის გარდა მასში შედიოდა დასავლეთ საქართველოს ნაწილი ([[არგვეთი]], [[აჭარა]]). მის შემადგენლობაში ივარაუდება ისტორიული ოლქები - [[გოგარენე]], [[ხორძენე]] და პარიადრის მთის კალთები (ისინი, [[სტრაბონი|სტრაბონის]] ცნობით, მხოლოდ ძვ. წ. II-I საუკუნეებში ჩამოაჭრეს სომხეთის სამეფოებმა იბერებს). 
+ძვ. წ. III საუკუნის დასაწყისში იბერია სამეფოში ძალაუფლება ხელში ჩაიგდო ადგილობრივი წარმოშობის პირმა ("მცხეთის მამასახლისების" საგვარეულოს წევრმა) [[ფარნავაზი|ფარნავაზმა]], რომელიც იბერიის მეფეთა ახალი დინასტიის - ფარნავაზიანების - ფუძემდებელი გახდა. ფარნავაზისა და მისი უახლოესი მემკვიდრეების დროს (ძვ. წ. III ს.) იბერიამ დიდ ძლიერებას მიაღწია და საკმაოდ ვრცელი სახელმწიფო გახდა. შიდა ქართლის, კახეთისა და მესხეთის გარდა მასში შედიოდა დასავლეთ საქართველოს ნაწილი ([[არგვეთი]], [[აჭარა]]). მის შემადგენლობაში ივარაუდება ისტორიული ოლქები - [[გოგარენე]], [[ხორძენე]] და პარიადრის მთის კალთები (ისინი, [[სტრაბონი|სტრაბონის]] ცნობით, მხოლოდ ძვ. წ. II-I საუკუნეებში ჩამოაჭრეს სომხეთის სამეფოებმა იბერებს). იბერიის სამეფოს ძალაუფლება ვრცელდებოდა აგრეთვე აღმოსავლეთ საქართველოს მთიანეთზე და დასავლეთ საქართველოს ბარის რაიონებზეც (ეგრისი). ქართული ისტორიული ტრადიცია უკვე ფარნავაზის ხანას მიაწერს სამეფოს დაყოფას 7 საერისთავოდ:
+
+*[[არგვეთი]]
+*[[ კახეთი]] და [[კუხეთი]]
+*[[ გარდაბანი]]
+* [[ტაშირი]] და [[აბოცი]]
+* [[ჯავახეთი]], [[კოლა]] და [[არტაანი]]
+* [[სამცხე]] და [[აჭარა]]
+* [[კლარჯეთი]]
+
+ცალკე ერთეულს ქმნიდა შიდა ქართლი, რომელიც სპასპეტის საგამგებლოს წარმოადგენდა. ფარნავაზის სუვერენიტეტს აღიარებდა, ამ ტრადიციის თანახმად, ეგრისიც.
+
+
 
 
 
