*Empty MediaWiki Message*

--- a/იბერია.mw
+++ b/იბერია.mw
@@ -17,6 +17,9 @@
 ცალკე ერთეულს ქმნიდა შიდა ქართლი, რომელიც სპასპეტის საგამგებლოს წარმოადგენდა. ფარნავაზის სუვერენიტეტს აღიარებდა, ამ ტრადიციის თანახმად, ეგრისიც.
 
 
+იბერიის დედაქალაქი [[მცხეთა]] მრავალი სხვადასხვა მხრიდან მომავალი გზის გადაკვეთის პუნქტში მდებარეობდა. აქ იყრიდა თავს გზები [[ალბანეთი|ალბანეთიდან]], [[სომხეთი|სომხეთიდან]], [[კოლხეთი|კოლხეთიდან]], [[ჩრდილოეთ კავკასია|ჩრდილოეთ კავკასიიდან]]. ამ ადგილზე გადიოდა დიდი საერთაშორისო სატრანზიტო-სავაჭრო გზა, რომელიც [[ინდოეთი|ინდოეთიდან]] მოდიოდა და კოლხეთის შავიზღვისპირა ქალაქებისაკენ მიემართებოდა. მტკვრის ხეობაში მცხეთის გარდა იყო იბერიის მნიშვნელოვანი ცენტრები - [[უფლისციხე]], [[წუნდა]], [[ოძრხე]] და სხვა. [[სტრაბონი|სტრაბონის]] ცნობით ელინისტური ხანის იბერია წარმოადგენდა მჭიდროდ დასახლებულ მეტწილად ქალაქებითა და დაბებით დასერილ ქვეყანას, სადაც იყო კრამიტისსახურავიანი და ხუროთმოძღვრების წესით ნაგები სახლები, ბაზრები და სხვა საზოგადო შენობები. იბერიის ქალაქებში იყო სავაჭრო სახელოსნო უბნები, ხშირად უცხო ტომის ხალხით დასახლებული. მაგ., ძვ. ქართული ქრონიკის მიხედვით, [[ძვ. წ. 169]] მცხეთაში დაარსებულა ებრაული კოლონია. იბერიაში ჭრიდნენ [[ალექსანდრე მაკედონელი|ალექსანდრე მაკედონელის]] ოქროს მონეტების მინაბაძებს, რაც მსოფლიო ბაზარზე იბერიის აქტიური მონაწილეობით იყო გამოწვეული. მის ტერიტორიაზე აღმოჩენილია უცხო ქვეყნების მოჭრილი [[ელინიზმი|ელინისტური ხანის]] მონეტებიც. იბერიის სამეფოში დაწინაურებული იყო სამშენებლო საქმე. აიგო ციხესიმაგრეები: [[არმაზციხე]] - სამეფო რეზიდენცია, [[ზადენციხე]] - სევსამორა, კახეთში - [[ნეკრესი]], აშენდა მცხეთა და სხვა, აღიმართა უზენაეს ღვთაებათა კერპები ([[არმაზი|არმაზის]], [[ზადენი|ზადენის]], [[აინინა|აინინასი]] და [[დანინა|დანინასი]]) და სხვა.
+
+
 
 
 
