*Empty MediaWiki Message*

--- a/შავი_ზღვის_დატბორვის_თეორია.mw
+++ b/შავი_ზღვის_დატბორვის_თეორია.mw
@@ -3,6 +3,14 @@
 
 1998 წელს უილიამ რაიანმა და უოლტერ პიტმანმა, [[კოლუმბიის უნივერსიტეტი|კოლუმბიის უნივერსიტეტის]] გეოლოგები, გამოაქვეყნეს მტკიცებანი მასიურ წყლის მოვარდნის მიმანიშნებელ ფაქტებზე [[ბოსფორი|ბოსფორის]] სრუტეში, რომელიც ძვ.წ. 5600 წელს უნდა მომხდარიყო.
 
+კავკასიონის მთების ყინულის მასიურმა დნობამ შავი და კასპიის ზღვები უზარმაზარ მტკნარი წლის ტბებად აქცია, მაშინ როცა მსოფლიო ზღვის დონე შედარებით დაბალი რჩებოდა. მტკნარი წლის ტბები ეგეოსის ზღვაში იღვრებოდნენ. კლიმატის აცივებამ ალპური ყინულების მომძლავრება გამოიწვია, შესაბამიად შავ ზღვაში ჩამდინარე მდინარეების წლის მოცულობ მკვეთრად შემცირდა, ზოგიერთმა მდინარემ კი გასავალი ჩრდილოეთის ზღვაში გაიკვალა, ამასთან ერთად შავი ზღვის წყლის დონე აორთქლებითად მცირდებოდა. შემდეგ, ძვ.წ. 5600 წლისთვის, მსოფლიო ზღვის საერთო დონე გაიზარდა, და როგორც რაიანი და პიტმანი ვარაუდობენ, აწეული ხმელთაშუა ზღვა საბოლოოდ ბოსფორის ფუძის კდლოვანი ბარიერის დონეს აჭარბებს და შავ ზღვაში იღვრება. ამ მოვლენამ 155.000 კმ² ფართობი მიწა დატბორა და მნიშვნელოვნად დააფართოვა შავი ზღვის სანაპირო ზოლი ჩრდილოეთითა და დასავლეთით. რაიანი და პიტმანი წერდნენ:
+
+:”ათი კუბური მილი [42 კუბ. კმ.] წყალი იღვრებოდა ყოველდღიურად, რაც ორასჯერ აღემატება ნიაგარას ჩანჩქერზე გადმოღვრილი წყლის მოცულობას. ... ბოსფორზე წარმოქმნილი სრუტეზე წყალი ღრიალით მიექანებოდა წარმოუდგენელი სიჩქარით არანაკლებ სამასი დღის განმავლობაში.”
+
+თიმცა ნეოლითური მიწათმოქმედება ამ დროისთვის უკვე პანოლიის დაბლობს აღწევდა, ავტორები მის გავრცელებას უკავშირებენ წყალდიდობით გადაადგილებულ ხალხს. ასევე ვარაუდობენ, რომ ამ უეცარ მასიურ წყალდიდობას გადარჩენილთა მეხსიერება იყო წყარო ნოეს წარღვნის ლეგენდისთვის.
+
+ექსპედიციათა სერიაში ზღვის არქეოლოგთა ჯგუფმა რობერტ ბალარდის ხელმძღვანელობით დაადგინეს უძველესი სანაპირო ზოლის მოხაზულობა, მტკნარი წლის ლოკოკინათა ნიჟარები, ჩაძირულ მდინარეთა ხეობები, ხის მორები ხელსაწყოების ანაბეჭდებით, ადამიანის შექმნილი სტრუქტურები დაახლოებით 100 მეტრში წყალში შავი ზღვის თანამედროვე სანაპიროდან თურქეთის ჩრდილოეთით.
+
 
 {{მუშავდება}}
 
