--- a/ნიუ-იორკ_ტაიმზი_(გაზეთი).mw
+++ b/ნიუ-იორკ_ტაიმზი_(გაზეთი).mw
@@ -17,6 +17,7 @@
 *''[http://www.nytimes.com/ ნიუ-იორკ ტაიმსი ინტერნეტში]''
 *[http://www.wqxr.com/ WQXR] - "ტაიმსის" რადიო სადგური
 
+{{ამერიკა}}
 [[კატეგორია:ამერიკის მასმედია]]
 [[კატეგორია:ნიუ-იორკი]]
 
