*Empty MediaWiki Message*

--- a/შავი_ზღვის_დატბორვის_თეორია.mw
+++ b/შავი_ზღვის_დატბორვის_თეორია.mw
@@ -3,15 +3,23 @@
 
 1998 წელს უილიამ რაიანმა და უოლტერ პიტმანმა, [[კოლუმბიის უნივერსიტეტი|კოლუმბიის უნივერსიტეტის]] გეოლოგები, გამოაქვეყნეს მტკიცებანი მასიურ წყლის მოვარდნის მიმანიშნებელ ფაქტებზე [[ბოსფორი|ბოსფორის]] სრუტეში, რომელიც ძვ.წ. 5600 წელს უნდა მომხდარიყო.
 
-კავკასიონის მთების ყინულის მასიურმა დნობამ შავი და კასპიის ზღვები უზარმაზარ მტკნარი წლის ტბებად აქცია, მაშინ როცა მსოფლიო ზღვის დონე შედარებით დაბალი რჩებოდა. მტკნარი წლის ტბები ეგეოსის ზღვაში იღვრებოდნენ. კლიმატის აცივებამ ალპური ყინულების მომძლავრება გამოიწვია, შესაბამიად შავ ზღვაში ჩამდინარე მდინარეების წლის მოცულობ მკვეთრად შემცირდა, ზოგიერთმა მდინარემ კი გასავალი ჩრდილოეთის ზღვაში გაიკვალა, ამასთან ერთად შავი ზღვის წყლის დონე აორთქლებითად მცირდებოდა. შემდეგ, ძვ.წ. 5600 წლისთვის, მსოფლიო ზღვის საერთო დონე გაიზარდა, და როგორც რაიანი და პიტმანი ვარაუდობენ, აწეული ხმელთაშუა ზღვა საბოლოოდ ბოსფორის ფუძის კდლოვანი ბარიერის დონეს აჭარბებს და შავ ზღვაში იღვრება. ამ მოვლენამ 155.000 კმ² ფართობი მიწა დატბორა და მნიშვნელოვნად დააფართოვა შავი ზღვის სანაპირო ზოლი ჩრდილოეთითა და დასავლეთით. რაიანი და პიტმანი წერდნენ:
+[[კავკასიონი|კავკასიონისა]] და [[კარპატია|კარპატიის]] მთების ყინულის მასიურმა დნობამ შავი და [[კასპიის ზღვა|კასპიის ზღვები]] უზარმაზარ მტკნარი წლის ტბებად აქცია, მაშინ როცა მსოფლიო ზღვის დონე შედარებით დაბალი რჩებოდა. მტკნარი წლის ტბები [[ეგეოსის ზღვა|ეგეოსის ზღვაში]] იღვრებოდა. კლიმატის აცივებამ ალპური ყინულების მომძლავრება გამოიწვია, შესაბამისად შავ ზღვაში ჩამდინარე მდინარეების წყლის მოცულობა მკვეთრად შემცირდა, ზოგიერთმა მდინარემ კი გასავალი [[ჩრდილოეთის ზღვა|ჩრდილოეთის ზღვაში]] გაიკვალა, ამასთან ერთად შავი ზღვის წყლის დონე აორთქლებითაც მცირდებოდა. შემდეგ, ძვ.წ. 5600 წლისთვის, მსოფლიო ზღვის საერთო დონე გაიზარდა, და როგორც რაიანი და პიტმანი ვარაუდობენ, აწეული ხმელთაშუა ზღვა საბოლოოდ ბოსფორის ფუძის კდლოვანი ბარიერს არღვევს და წარმოუდგენელი სისწრაფით შავ ზღვაში იღვრება. ამ მოვლენამ 155.000 კმ² ფართობი მიწა დატბორა და მნიშვნელოვნად გააფართოვა შავი ზღვის სანაპირო ზოლი ჩრდილოეთითა და დასავლეთით. რაიანი და პიტმანი წერდნენ:
 
-:”ათი კუბური მილი [42 კუბ. კმ.] წყალი იღვრებოდა ყოველდღიურად, რაც ორასჯერ აღემატება ნიაგარას ჩანჩქერზე გადმოღვრილი წყლის მოცულობას. ... ბოსფორზე წარმოქმნილი სრუტეზე წყალი ღრიალით მიექანებოდა წარმოუდგენელი სიჩქარით არანაკლებ სამასი დღის განმავლობაში.”
+:”ათი კუბური მილი [42 კუბ. კმ.] წყალი იღვრებოდა ყოველდღიურად, რაც ორასჯერ აღემატება [[ნიაგარა|ნიაგარას]] ჩანჩქერზე გადმოღვრილი წყლის მოცულობას. ... ბოსფორზე წარმოქმნილ სრუტეზე წყალი ღრიალით მიექანებოდა წარმოუდგენელი სიჩქარით არანაკლებ სამასი დღის განმავლობაში.”
 
-თიმცა ნეოლითური მიწათმოქმედება ამ დროისთვის უკვე პანოლიის დაბლობს აღწევდა, ავტორები მის გავრცელებას უკავშირებენ წყალდიდობით გადაადგილებულ ხალხს. ასევე ვარაუდობენ, რომ ამ უეცარ მასიურ წყალდიდობას გადარჩენილთა მეხსიერება იყო წყარო ნოეს წარღვნის ლეგენდისთვის.
+თუმცა [[ნეოლითი|ნეოლითური]] მიწათმოქმედება ამ დროისთვის უკვე პანოლიის დაბლობს აღწევდა, ავტორები მის გავრცელებას უკავშირებენ წყალდიდობით გადაადგილებულ ხალხებს. ასევე ვარაუდობენ, რომ ამ უეცარ მასიურ წყალდიდობას გადარჩენილთა მეხსიერება იყო ნოეს წარღვნის ლეგენდის საფუძველი.
 
-ექსპედიციათა სერიაში ზღვის არქეოლოგთა ჯგუფმა რობერტ ბალარდის ხელმძღვანელობით დაადგინეს უძველესი სანაპირო ზოლის მოხაზულობა, მტკნარი წლის ლოკოკინათა ნიჟარები, ჩაძირულ მდინარეთა ხეობები, ხის მორები ხელსაწყოების ანაბეჭდებით, ადამიანის შექმნილი სტრუქტურები დაახლოებით 100 მეტრში წყალში შავი ზღვის თანამედროვე სანაპიროდან თურქეთის ჩრდილოეთით.
+ექსპედიციათა სერიაში ზღვის არქეოლოგთა ჯგუფმა რობერტ ბალარდის ხელმძღვანელობით დაადგინეს უძველესი სანაპირო ზოლის მოხაზულობა, მტკნარი წლის ლოკოკინათა ნიჟარები, ჩაძირულ მდინარეთა ხეობები, ხის მორები ხელსაწყოების ანაბეჭდებით, ადამიანის შექმნილი სტრუქტურები წყალში შავი ზღვის თანამედროვე სანაპიროდან დაახლოებით 100 მეტრში თურქეთის ჩრდილოეთით. მტკნარი წლის მოლუსკების ასაკის რადიოკარბონულმა დათარიღებამ უჩვენა, რომ მათი ასაკი დაახ. 7.000 წელი უნდა იყოს.
 
+ჟურნალი ”[[ნიუ საიენტისტი (ჟურნალი)|ნიუ საიენტისტის]]” გამოქვეყნებული ანგარიშის თანახმად ([[4 მაისი]], [[2002]], გვ. 13), მკვლევარებმა ბოსფორის სამხრეთით წყალქვეშა დელტა აღმოაჩინეს. ასევე მტკიცე საბუთი არსებობს ძლიერი მტკნარი წყლის დინების არსებობისა შავი ზღვიდან ძვ.წ. მე-8 ათასწლეულში.
 
-{{მუშავდება}}
+პან-ევროპული პროექტის ფარგლებში შავი ზღვის ფსკერის დანალექის გამოკვლევამ 2004 წელს დაადასტურა პიტმან/რაიანის დაკვნები. უფრო მეტიც, მარკ სიდალის მიერ წარმოებული გათვლებით ნაწინასწარმეტყველი წყალქვეშა კანიონის არსებობაც ფაქტობრივად დადასტურდა.
+
+ეს ჰიპოთეზა დღემდე აქტიური განხილვისა და დებატების საგანია არქეოლოგთა შორის.
+
 
 [[კატეგორია:შავი ზღვა]]
+[[კატეგორია:ბუნებრივი კატაკლიზმები]]
+
+[[en:Black Sea deluge theory]]
+[[pl:Potop Morza Czarnego]]
